cluster/clusters/cluster-0/matrix/delegation/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delegation-nginx
  namespace: matrix
spec:
  selector:
    matchLabels:
      app: delegation-nginx
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: delegation-nginx
    spec:
      containers:
        - image: nginx
          name: nginx
          volumeMounts:
            - name: conf
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
      volumes:
        - name: conf
          configMap:
            name: delegation-conf
            items:
              - key: default.conf
                path: default.conf
