cluster/clusters/cluster-0/matrix/delegation/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: delegation-nginx
  name: delegation-service
  namespace: matrix
spec:
  clusterIP: None
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: delegation-nginx
  type: ClusterIP
